# q-salkit

./: .gitignore  README.md
notebooks/hybrid/: VQC.ipynb  VQC_Cleveland_dataset.ipynb  hybrid_qnn_saliency.ipynb  hybrid_qnn_saliency_cleveland.ipynb
notebooks/quantum/: VQC_Cleveland.ipynb  VQC_Iris.ipynb
qnn_saliency/: README.md  pyproject.toml
qnn_saliency/examples/: qiskit_vqc_example.py  usage_examples.py
qnn_saliency/src/qnn_saliency/: __init__.py
qnn_saliency/src/qnn_saliency/gradients/: __init__.py  base.py  finite_difference.py  parameter_shift.py
qnn_saliency/src/qnn_saliency/metrics/: __init__.py  diagnostics.py  distribution.py  faithfulness.py
qnn_saliency/src/qnn_saliency/models/: __init__.py  base.py  wrappers.py
qnn_saliency/src/qnn_saliency/saliency/: __init__.py  base.py  gradient.py  integrated_gradients.py  occlusion.py  smoothgrad.py
qnn_saliency/src/qnn_saliency/utils/: __init__.py  validation.py
qnn_saliency/tests/: __init__.py  conftest.py  test_diagnostics.py  test_distribution.py  test_faithfulness.py  test_saliency.py  test_wrappers.py
